--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-fileicons",
   "version": "0.1.0",
   "description": "A React component to use file icons more flexible.",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
