--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "@storybook/react": "^5.0.1",
-    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-info": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.1",
     "@storybook/addon-links": "^5.0.1",
     "@storybook/addons": "^5.0.1",
     "styled-components": "^4.1.3",
@@ -67,7 +68,5 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
-  "dependencies": {
-    "@storybook/addon-knobs": "^5.0.1"
-  }
+  "dependencies": {}
 }
