--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-fileicons",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React component to use file icons more flexible.",
   "main": "./dist/index.js",
   "engines": {
@@ -52,7 +52,6 @@
     "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.2.1",
-    "prop-types": "^15.5.8",
     "gulp-uglify": "^3.0.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -60,13 +59,15 @@
     "@storybook/addon-info": "^5.0.1",
     "@storybook/addon-knobs": "^5.0.1",
     "@storybook/addon-links": "^5.0.1",
-    "@storybook/addons": "^5.0.1",
-    "styled-components": "^4.1.3",
-    "typeface-roboto": "0.0.54"
+    "@storybook/addons": "^5.0.1"
   },
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "styled-components": "^4.1.3",
+    "typeface-roboto": "0.0.54",
+    "prop-types": "^15.5.8"
+  }
 }
