--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-fileicons",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "A React component to use file icons more flexible.",
   "main": "./dist/index.js",
   "engines": {
@@ -31,43 +31,43 @@
   "bugs": {
     "url": "https://github.com/tomxpcvx/react-fileicons/issues"
   },
-  "homepage": "https://github.com/tomxpcvx/react-fileicons",
+  "homepage": "https://tomxpcvx.wtf/react-fileicons",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@storybook/addon-info": "^5.1.10",
-    "@storybook/addon-knobs": "^5.0.1",
-    "@storybook/addon-links": "^5.0.1",
-    "@storybook/addons": "^5.0.1",
-    "@storybook/react": "^5.0.1",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "@babel/register": "^7.5.5",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "del": "^2.2.2",
-    "eslint": "^5.12.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-react": "^7.12.4",
-    "gulp": "^4.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-uglify": "^3.0.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "dependencies": {
-    "styled-components": "^4.1.3",
-    "typeface-roboto": "0.0.54",
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "styled-components": "^4.3.2",
+    "typeface-roboto": "0.0.54"
   }
 }
