--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-fileicons",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "A React component to use file icons more flexible.",
   "main": "./dist/index.js",
   "engines": {
     "node": ">=8.0.0"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/@tomxpcvx" },
   "scripts": {
     "build": "node ./node_modules/gulp/bin/gulp.js build",
     "lint": "node ./node_modules/gulp/bin/gulp.js lint",
