--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,92 @@
 {
-  "extends": "airbnb",
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "rules": {
-    "func-names": 0,
-    "comma-dangle": [2, "never"],
-    "no-console": 0,
-    "max-len": [2, 200],
-    "import/no-extraneous-dependencies": 0,
-    "no-param-reassign": 0,
-    "no-unneeded-ternary": 0,
-    "class-methods-use-this": 0,
-    "no-plusplus": 0,
-    "arrow-body-style": 0,
-    "arrow-parens": 0,
-    "no-lonely-if": 0,
-    "react/jsx-filename-extension": 0,
-    "no-nested-ternary": 0
-  }
+	"extends": ["eslint:recommended", "plugin:react/recommended"],
+	"env": {
+		"browser": true,
+		"node": true,
+		"es6": true
+	},
+	"rules": {
+		"func-names": 0,
+		"comma-dangle": [2, "never"],
+		"no-console": 1,
+		"max-len": [2, 100],
+		"import/no-extraneous-dependencies": 0,
+		"no-param-reassign": 0,
+		"no-unneeded-ternary": 0,
+		"class-methods-use-this": 0,
+		"no-plusplus": 0,
+		"arrow-body-style": 0,
+		"arrow-parens": 0,
+		"no-lonely-if": 0,
+		"react/jsx-filename-extension": 0,
+		"no-nested-ternary": 0,
+		"no-mixed-spaces-and-tabs": 2,
+		"indent": ["error", "tab"],
+		"no-irregular-whitespace": "error",
+		"no-trailing-spaces": "error",
+		"object-curly-newline": [
+			"error",
+			{
+				"ObjectExpression": {
+					"minProperties": 1
+				},
+				"ObjectPattern": {
+					"multiline": true
+				},
+				"ImportDeclaration": {
+					"multiline": true,
+					"minProperties": 3
+				},
+				"ExportDeclaration": {
+					"multiline": true,
+					"minProperties": 3
+				}
+			}
+		],
+		"object-property-newline": "error",
+		"brace-style": [
+			"error",
+			"1tbs",
+			{
+				"allowSingleLine": true
+			}
+		],
+		"no-unused-expressions": "error",
+		"no-unused-vars": 1,
+		"react/jsx-curly-newline": [
+			"error",
+			{
+				"multiline": "consistent",
+				"singleline": "consistent"
+			}
+		],
+		"react/prop-types": "off",
+		"react/jsx-one-expression-per-line": "error",
+		"quotes": ["error", "single"]
+	},
+	"parser": "babel-eslint",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true,
+			"modules": true
+		}
+	},
+	"ignorePatterns": ["node_modules/", "build/"],
+	"settings": {
+		"react": {
+			"createClass": "createReactClass",
+			"pragma": "React",
+			"version": "detect",
+			"flowVersion": "0.53"
+		},
+		"propWrapperFunctions": [
+			"forbidExtraProps",
+			{ "property": "freeze", "object": "Object" },
+			{ "property": "myFavoriteWrapper" }
+		],
+		"linkComponents": [
+			"Hyperlink",
+			{ "name": "Link", "linkAttribute": "to" }
+		]
+	}
 }
