--- a/package.json
+++ b/package.json
@@ -1,73 +1,85 @@
 {
-  "name": "react-fileicons",
-  "version": "1.0.10",
-  "description": "A React component to use file icons more flexible.",
-  "main": "./dist/index.js",
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "scripts": {
-    "build": "node ./node_modules/gulp/bin/gulp.js build",
-    "lint": "node ./node_modules/gulp/bin/gulp.js lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prepare": "npm run build"
-  },
-  "files": [
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tomxpcvx/react-fileicons.git"
-  },
-  "keywords": [
-    "react",
-    "fileicons",
-    "file",
-    "icons"
-  ],
-  "author": "@tomxpcvx",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tomxpcvx/react-fileicons/issues"
-  },
-  "homepage": "https://tomxpcvx.wtf/react-fileicons",
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "@storybook/addon-info": "^5.3.13",
-    "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/addons": "^5.3.13",
-    "@storybook/react": "^5.3.13",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "del": "^2.2.2",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-load-plugins": "^2.0.2",
-    "gulp-plumber": "^1.2.1",
-    "gulp-uglify": "^3.0.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
-  },
-  "dependencies": {
-    "prop-types": "^15.5.8",
-    "styled-components": "^4.4.1",
-    "typeface-roboto": "0.0.54"
-  }
+	"name": "react-fileicons",
+	"version": "1.0.10",
+	"description": "A React component to use file icons more flexible.",
+	"main": "./dist/index.js",
+	"engines": {
+		"node": ">=8.0.0"
+	},
+	"scripts": {
+		"build": "node ./node_modules/gulp/bin/gulp.js build",
+		"lint": "node ./node_modules/gulp/bin/gulp.js lint",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook",
+		"prepare": "npm run build"
+	},
+	"files": [
+		"dist"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/tomxpcvx/react-fileicons.git"
+	},
+	"keywords": [
+		"react",
+		"fileicons",
+		"file",
+		"icons"
+	],
+	"author": "@tomxpcvx",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/tomxpcvx/react-fileicons/issues"
+	},
+	"homepage": "https://tomxpcvx.wtf/react-fileicons",
+	"devDependencies": {
+		"@babel/core": "^7.8.4",
+		"@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+		"@babel/preset-env": "^7.8.4",
+		"@babel/preset-react": "^7.8.3",
+		"@babel/register": "^7.8.3",
+		"@storybook/addon-info": "^5.3.13",
+		"@storybook/addon-knobs": "^5.3.13",
+		"@storybook/addon-links": "^5.3.13",
+		"@storybook/addons": "^5.3.13",
+		"@storybook/react": "^5.3.13",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "^8.0.6",
+		"del": "^2.2.2",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^17.1.1",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.18.3",
+		"gulp": "^4.0.2",
+		"gulp-babel": "^8.0.0",
+		"gulp-eslint": "^6.0.0",
+		"gulp-if": "^2.0.2",
+		"gulp-load-plugins": "^2.0.2",
+		"gulp-plumber": "^1.2.1",
+		"gulp-uglify": "^3.0.2",
+		"husky": "^4.2.3",
+		"lint-staged": "^10.0.7",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0"
+	},
+	"peerDependencies": {
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1"
+	},
+	"dependencies": {
+		"prop-types": "^15.5.8",
+		"styled-components": "^4.4.1",
+		"typeface-roboto": "0.0.54"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx}": [
+			"eslint --fix --color"
+		]
+	}
 }
