--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -3,9 +3,6 @@ name: npm audit
 on:
     schedule:
         - cron: "7 0 * * *"
-    push:
-        branches:
-            - master
     pull_request:
         branches:
             - master
@@ -22,4 +19,4 @@ jobs:
               with:
                   github_token: ${{ secrets.ACCESS_TOKEN }}
                   issue_assignees: tomxpcvx
-                  issue_labels: vulnerability,test
+                  issue_labels: vulnerability
