--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -2,7 +2,7 @@ name: npm audit
 
 on:
     schedule:
-        - cron: "7 0 * * *"
+        - cron: "0 0 * * 5"
     pull_request:
         branches:
             - master
