:sparkles::recycle::bookmark: Simplifies the usability of the FileIcon component, refactorized code, Release 2.0.1

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-	"extends": ["eslint:recommended", "plugin:react/recommended"],
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended"
+	],
 	"env": {
 		"browser": true,
 		"node": true,
@@ -7,9 +10,15 @@
 	},
 	"rules": {
 		"func-names": 0,
-		"comma-dangle": [2, "never"],
+		"comma-dangle": [
+			2,
+			"never"
+		],
 		"no-console": 1,
-		"max-len": [2, 100],
+		"max-len": [
+			2,
+			100
+		],
 		"import/no-extraneous-dependencies": 0,
 		"no-param-reassign": 0,
 		"no-unneeded-ternary": 0,
@@ -21,29 +30,33 @@
 		"react/jsx-filename-extension": 0,
 		"no-nested-ternary": 0,
 		"no-mixed-spaces-and-tabs": 2,
-		"indent": ["error", "tab"],
+		"indent": [
+			"error",
+			"tab"
+		],
 		"no-irregular-whitespace": "error",
 		"no-trailing-spaces": "error",
 		"object-curly-newline": [
 			"error",
 			{
 				"ObjectExpression": {
-					"minProperties": 1
+					"minProperties": 2
 				},
 				"ObjectPattern": {
 					"multiline": true
 				},
 				"ImportDeclaration": {
 					"multiline": true,
-					"minProperties": 3
+					"minProperties": 5
 				},
 				"ExportDeclaration": {
 					"multiline": true,
-					"minProperties": 3
+					"minProperties": 5
 				}
 			}
 		],
-		"object-property-newline": "error",
+		"object-curly-spacing": ["error", "always"],
+		"react/jsx-curly-spacing": [2, {"when": "always"}],
 		"brace-style": [
 			"error",
 			"1tbs",
@@ -62,7 +75,8 @@
 		],
 		"react/prop-types": "off",
 		"react/jsx-one-expression-per-line": "error",
-		"quotes": ["error", "single"]
+		"quotes": ["error", "single"],
+		"react/display-name": 0
 	},
 	"parser": "babel-eslint",
 	"parserOptions": {
@@ -71,22 +85,22 @@
 			"modules": true
 		}
 	},
-	"ignorePatterns": ["node_modules/", "build/"],
-	"settings": {
-		"react": {
-			"createClass": "createReactClass",
-			"pragma": "React",
-			"version": "detect",
-			"flowVersion": "0.53"
-		},
-		"propWrapperFunctions": [
-			"forbidExtraProps",
-			{ "property": "freeze", "object": "Object" },
-			{ "property": "myFavoriteWrapper" }
-		],
-		"linkComponents": [
-			"Hyperlink",
-			{ "name": "Link", "linkAttribute": "to" }
-		]
-	}
+	"ignorePatterns": ["node_modules/", "dist/"],
+    "settings": {
+        "react": {
+          "createClass": "createReactClass",
+          "pragma": "React",
+          "version": "detect",
+          "flowVersion": "0.53"
+        },
+        "propWrapperFunctions": [
+            "forbidExtraProps",
+            {"property": "freeze", "object": "Object"},
+            {"property": "myFavoriteWrapper"}
+        ],
+        "linkComponents": [
+          "Hyperlink",
+          {"name": "Link", "linkAttribute": "to"}
+        ]
+      }
 }
