--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.prod
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
