--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,17 +4,18 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
     strategy:
       matrix:
         node-version:
           - 15.x
           - 16.x
+          - 17.x
     steps:
-      - uses: actions/checkout@v2.4.0
+      - uses: actions/checkout@v3.0.2
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2.5.1
+        uses: actions/setup-node@v3.3.0
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -27,7 +28,7 @@ jobs:
           npm ci
           npm run build-storybook
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4.2.2
+        uses: JamesIves/github-pages-deploy-action@v4.3.4
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
